--- a/Dotnet_DevOps_Docker_Demo.csproj
+++ b/Dotnet_DevOps_Docker_Demo.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
-	  <OutputPath>obj\public</OutputPath>
+	  <OutputPath>obj\public\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
